--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "node server.js",
-
-  
-
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -23,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "razorpay": "^2.9.4",
     "stripe": "^17.1.0"
